# Magma_Engine

./: .gitignore  Magma.sln  build.bat  clean.bat  readme.md
dependencies/lua/sources/: CMakeLists.txt
executables/assets/: axolotl.material  axolotl.mesh  axolotl_old.material  bubble.material  checkers.dds  default.material  fonts.fontdef  golf.material  logo.material  luatest.lua  magmaMat.material  magmalogo.dds  overlay.material  rat.material  test.magmascene
projects/EC/: EC.vcxproj  EC.vcxproj.filters
projects/ECS/: ECS.vcxproj  ECS.vcxproj.filters
projects/Input/: Input.vcxproj  Input.vcxproj.filters
projects/Lua/: Lua.vcxproj  Lua.vcxproj.filters
projects/LuaBridge/: LuaBridge.vcxproj  LuaBridge.vcxproj.filters
projects/Magma/: Magma.vcxproj  Magma.vcxproj.filters
projects/MagmaEngine/: MagmaEngine.vcxproj  MagmaEngine.vcxproj.filters
projects/Physics/: Physics.vcxproj  Physics.vcxproj.filters
projects/Render/: Render.vcxproj  Render.vcxproj.filters
projects/Sounds/: Sounds.vcxproj  Sounds.vcxproj.filters
sources/: singleton.h
sources/EC/: audio_source.cpp  audio_source.h  button.cpp  button.h  component.cpp  component.h  ec.h  ec_defs.h  enemy_controller.cpp  enemy_controller.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  factory.cpp  factory.h  factory_manager.cpp  factory_manager.h  fps_counter.cpp  fps_counter.h  image.cpp  image.h  init_factories.cpp  init_factories.h  messages.h  messages_defs.h  mpl.h  player_controller.cpp  player_controller.h  progress_bar.cpp  progress_bar.h  quaternion.cpp  quaternion.h  scene.h  (+13 more)
(+123 files in other folders)
